# PicEdit

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  LICENSE  README.md  REFACTORING_PLAN.md  REFINEMENT_ANALYSIS.md  bgbye_research.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.claude/init/: SKILL.md
.claude/skills/: code-quality.md
.github/: copilot-instructions.md
.github/skills/: code-quality.md
.github/workflows/: build-wasm.yml  deploy.yml
public/: coi-serviceworker.js  manifest.json
public/wasm/compressor/: compressor.d.ts  compressor.js  compressor_bg.wasm  compressor_bg.wasm.d.ts
public/wasm/converter/: converter.d.ts  converter.js  converter_bg.wasm  converter_bg.wasm.d.ts
public/wasm/post-refinement/: post_refinement.d.ts  post_refinement.js  (+2 more)
scripts/: build-wasm.mjs  format.mjs  preview.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: CancelButton.tsx  ComparisonResults.tsx  DownloadButton.tsx  FileUploader.tsx  RetryButton.tsx  SegmentedButtons.tsx  StatsBar.tsx  ToggleSwitch.tsx  ToolHeader.tsx
src/hooks/: useBatchProcessor.ts
src/img-compressor/: index.ts  worker.ts
src/imgcompressor/: index.ts  worker.ts
src/lib/: crc32.ts  downloadUtils.ts  imageUtils.ts  thumbnailUtils.ts  workerPool.ts  workerPoolBridge.ts  zipUtil.ts
src/types/: bgRemover.ts  compressor.ts  image.ts  index.ts  worker.ts
wasm/: Cargo.toml
wasm/compressor/: Cargo.toml
wasm/converter/: Cargo.toml
wasm/converter/src/: alpha.rs  avif.rs  bmp.rs  color.rs  ico.rs  lib.rs  resize.rs  svg_trace.rs  tiff.rs  tiff_decode.rs
wasm/post-refinement/: Cargo.toml
wasm/pre-refinement/: Cargo.toml
wasm/resizer/: Cargo.toml
wasm/server/: Cargo.toml
wasm/server/src/: chunked_download.rs  lib.rs
(+141 files in other folders)
