[package]
name = "converter"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
tiff = { version = "0.11", default-features = false }
ravif = { version = "0.13", default-features = false }
rgb = "0.8"
vtracer = "0.6"
