[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Event",
    "EventTarget",
    "Window",
    "IdbFactory",
    "IdbDatabase",
    "IdbTransaction",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbTransactionMode",
    "Request",
    "Response",
    "Headers",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "DomStringList",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
